Add firebase remote configs

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,31 +1,34 @@
 <resources>
 
-    <string name="app_name">Iqos Map</string>
-    <string name="google_map_api_key">AIzaSyAhBFrYr_ljelfVIDW37WJOqsTpFYWpIuw</string>
+    <string name="app_name" translatable="false">Iqos Map</string>
+    <string name="google_map_api_key" translatable="false">AIzaSyAhBFrYr_ljelfVIDW37WJOqsTpFYWpIuw</string>
 
-    <string name="filter_sticks_title">Стики</string>
-    <string name="filter_sticks_descriptions">Точки продажи стиков</string>
+    <string name="filter_sticks_title">Sticks</string>
+    <string name="filter_sticks_descriptions">Point selling sticks</string>
 
-    <string name="filter_devices_title">Девайсы</string>
-    <string name="filter_devices_descriptions">Места где можно купить девайсы IQOS</string>
+    <string name="filter_devices_title">Devices</string>
+    <string name="filter_devices_descriptions">Places where you can buy IQOS devices</string>
 
-    <string name="filter_accessories_title">Аксесуары</string>
-    <string name="filter_accessories_descriptions">Кастомизация, зарядные устройства</string>
+    <string name="filter_accessories_title">Accessories</string>
+    <string name="filter_accessories_descriptions">Customization, chargers</string>
 
-    <string name="filter_service_title">Сервис</string>
-    <string name="filter_service_descriptions">Ремонт, обслуживание, замена</string>
+    <string name="filter_service_title">Service</string>
+    <string name="filter_service_descriptions">Repair, maintenance, replacement</string>
 
     <string name="filter_friendly_title">Friendly</string>
-    <string name="filter_friendly_descriptions">Толерантные заведения</string>
+    <string name="filter_friendly_descriptions">Friendly places</string>
 
-    <string name="cancel">Отмена</string>
-    <string name="apply">Применить</string>
+    <string name="cancel">Cancel</string>
+    <string name="apply">Apply</string>
 
-    <string name="error_internet_connection">Отсутствует интернет соединение</string>
+    <string name="error_internet_connection">No internet connection</string>
 
-    <string name="repeat">Повторить</string>
-    <string name="address_format">Адресс: %s</string>
-    <string name="phone_format">Телефон: %s</string>
-    <string name="schedulers_format">Время работы: %s</string>
+    <string name="repeat">Repeat</string>
+    <string name="address_format">Address: %s</string>
+    <string name="phone_format">Phone: %s</string>
+    <string name="schedulers_format">Working hours: %s</string>
+
+    <string name="attention">Attention</string>
+    <string name="new_version_is_available">A new version is available</string>
 
 </resources>
